# CUser-Web

./: .eslintrc.json  .gitignore  README.md  components.json  eslint.config.mjs  next.config.mjs  package.json  theme.json  tsconfig.json
.husky/: commit-msg  pre-commit
app/: command.ts  constant.ts  global.d.ts  home.module.scss  home.tsx  layout.scss  layout.tsx  page.tsx  sidebar.tsx  types.ts  utils.ts
app/api/: aitaas.ts  alibaba.ts  anthropic.ts  auth.ts  azure.ts  baidu.ts  bytedance.ts  common.ts  glm.ts  google.ts  iflytek.ts  moonshot.ts  openai.ts  proxy.ts  stability.ts  xai.ts
app/assets/: bg.avif
app/client/: api.ts
app/components/: artifacts.tsx  auth-control.module.scss  auth-control.tsx  auth-page.module.scss  auth-page.tsx  emoji.tsx  error.tsx  input-range.module.scss  input-range.tsx  markdown.module.scss  markdown.tsx  model-select.tsx  ui-lib.module.scss  ui-lib.tsx  user-account.module.scss  user-account.tsx
app/config/: build.ts  env.ts  secret.ts  server.ts
app/http/: request.ts  socket.ts
app/lib/: audio.ts
app/locales/: en.ts  index.ts  zh.ts
app/masks-bk/: build.ts  cn.ts  en.ts  index.ts  typing.ts
app/openapi/: index.ts
app/store/: chat.ts  config.ts  index.ts  mask.ts  model.ts  plugin.ts  prompt.ts  sync.ts  update.ts  user.ts
app/styles/: globals.scss  override.scss  window.scss
app/utils/: baidu.ts  chat.ts  file.ts  media.ts  model.ts  ms_edge_tts.ts  store.ts  stream.ts  sync.ts  sys.ts  touch.ts  useLLM.ts  useMeeting.ts  useRecording.ts  useSTS.ts  useSTT.ts  useSTTTT.ts  useTTS.ts
public/: prompts.json  serviceWorker.js  serviceWorkerRegister.js  silero_vad_legacy.onnx  silero_vad_v5.onnx  site.webmanifest
scripts-bk/: fetch-prompts.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  stream.rs
(+48 files in other folders)
